--- a/about.html
+++ b/about.html
@@ -46,15 +46,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html"
+              <a
+                class="nav-link"
+                href="index.html"
+                title="Homepage Anna Marciniak"
                 >Home<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About Anna Marciniak"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Anna Marciniak"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -96,7 +109,11 @@
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:amarciniak@uoc.edu" class="email-link">
+      <a
+        href="mailto:amarciniak@uoc.edu"
+        class="email-link"
+        title="Contact Anna Marciniak"
+      >
         amarciniak@uoc.edu
       </a>
     </div>
