--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
     <h1 class="text-center">Anna Marciniak</h1>
     <h3 class="text-center">🇵🇱 Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link"
+        title="Contact Anna Marciniak"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About Anna Marciniak"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row mb-5">
@@ -81,7 +88,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="project-link mt-5">Launch Yoga App</a>
+            <a href="#" class="project-link mt-5" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -96,16 +105,22 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="project-link mt-5">Launch Weather App</a>
+            <a href="#" class="project-link mt-5" title="Weather app project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" alt="yoga" />
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded"
+            alt="weather-app"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" alt="yoga" />
+          <img src="images/yogurt.png" class="img-fluid rounded" alt="yogurt" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -116,7 +131,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="project-link">Launch Yogurt App</a>
+            <a href="#" class="project-link" title="Yogurt app project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
