--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="yoga" />
+          <img src="images/yoga.png" class="img-fluid rounded" alt="yoga app" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -114,13 +114,17 @@
           <img
             src="images/weather.png"
             class="img-fluid rounded"
-            alt="weather-app"
+            alt="weather app"
           />
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" alt="yogurt" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded"
+            alt="yogurt app"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
